# ThePond

./: .env.example  .gitignore  BOOTSTRAP.md  CLAUDE.md  Caddyfile  Caddyfile.local  PROJECT.md  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  state.rs
backend/src/models/: media.rs  mod.rs  phase.rs  snapshot.rs  user.rs
backend/src/routes/: clips.rs  events.rs  media.rs  mod.rs  orchestration.rs  users.rs  voice.rs
backend/src/services/: auth.rs  broadcast.rs  export.rs  mod.rs  phase_logic.rs  pseudo.rs  snapshot.rs  storage.rs
design/: Confirmation.html  INDEX.md  Mosaic 4 screens.html  Mosaic 6 screens.html  Slideshow TV v2.html  The Pond - Design System.html  Upload v2.html  Welcome v2.html
docs/superpowers/specs/: 2026-05-01-prompt-14-pwa-install-offline-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  pwa-assets.config.ts  tailwind.config.js  vite.config.ts
frontend/public/: offline.html
frontend/src/: App.vue  main.ts
frontend/src/components/: ChallengeBanner.vue  Duck.vue  FilterChips.vue  InstallSheet.vue  MareTVPill.vue  MediaCard.vue  PendingUploadsPill.vue  Pond.vue  PondCounter.vue  PrimaryButton.vue  SecondaryButton.vue
frontend/src/composables/: useEventStream.ts  useInstallPrompt.ts  useNetworkStatus.ts
frontend/src/router/: index.ts
frontend/src/services/: uploadDb.ts
frontend/src/stores/: snapshot.ts  uploadQueue.ts  user.ts  witness.ts
frontend/src/styles/: global.css  tokens.css
frontend/src/types/: duck.ts  snapshot.ts
frontend/src/views/: ClipCaptureView.vue  ClipPlayerView.vue  ConfirmationView.vue  GalleryView.vue  HomeView.vue  MareTVInstructionsView.vue  MareTVView.vue  OrchestrationView.vue  StubView.vue  UploadView.vue  VoiceCaptureView.vue  VoicePlayerView.vue  WelcomeView.vue
themes/duck-pond/: phases.ron  pseudo.ron  strings.ron  theme.ron
